# SS11Labs

./: .gitignore  BUGFIX_ANALYSIS.md  CMakeLists.txt  MULTISESSION_ANALYSIS.md  README.md  doc.txt
.github/workflows/: sync_to_private.yml
include/: elevenlabs_defs.h  elevenlabs_http.h  elevenlabs_synth.h  elevenlabs_utils.h  ulaw_decode.h
src/: elevenlabs_http.c  elevenlabs_synth_channel.c  elevenlabs_synth_engine.c  elevenlabs_utils.c  ulaw_decode.c
standalone/: Makefile
